<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/pizza_checkout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textStyle="bold"
                android:hint="@string/pizza_hint"/>
            <ImageView
                android:id="@+id/pizza_checkout_order_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/size_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size_label"
                android:textAlignment="center"
                style="?android:listSeparatorTextViewStyle"/>
            <TextView
                android:id="@+id/size_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/dough_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/dough_label"
                style="?android:listSeparatorTextViewStyle"/>
            <TextView
                android:id="@+id/dough_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/toppings_checkout_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/toppings_label"
                style="?android:listSeparatorTextViewStyle"/>
            <TextView
                android:id="@+id/toppings_checkout_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/price_checkout_label"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_label"
                style="?android:listSeparatorTextViewStyle"/>
            <TextView
                android:id="@+id/price_checkout_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/info_checkout_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/delivery_info_label"
                style="?android:listSeparatorTextViewStyle"/>
            <EditText
                android:id="@+id/full_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_hint"/>
            <EditText
                android:id="@+id/delivery_address_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delivery_address_hint"/>
            <EditText
                android:id="@+id/phone_number_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:digits="0123456789+"
                android:hint="@string/phone_hint"/>
            <EditText
                android:id="@+id/card_number_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="16"
                android:hint="@string/card_number_hint"/>
            <EditText
                android:id="@+id/expiry_date_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="number"
                android:hint="@string/expiry_date_hint"/>
            <EditText
                android:id="@+id/cvv_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:hint="@string/cvv_hint"/>
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_button_label"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>