<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/pizza_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:hint="@string/pizza_hint"/>
                    <ImageView
                        android:id="@+id/pizza_order_pic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/size_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/size_label"
                        android:textAlignment="center"
                        style="?android:listSeparatorTextViewStyle"/>
                    <Spinner
                        android:id="@+id/size_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/dough_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dough_label"
                        android:textAlignment="center"
                        style="?android:listSeparatorTextViewStyle"/>
                    <Spinner
                        android:id="@+id/dough_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <CheckBox
                        android:id="@+id/wheat_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wheat_label"/>
                    <TextView
                        android:id="@+id/toppings_order_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/toppings_label"
                        style="?android:listSeparatorTextViewStyle"/>
                    <TextView
                        android:id="@+id/toppings_order_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/select_toppings_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_toppings_button_label"/>
                    <TextView
                        android:id="@+id/price_order_label"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price_label"
                        style="?android:listSeparatorTextViewStyle"/>
                    <TextView
                        android:id="@+id/price_order_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"/>
                    <Button
                        android:id="@+id/checkout_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout_button_label"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>