<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/confirm_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dear"
                android:textSize="25dp"
                android:paddingTop="30dp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/confirm_thanks_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25dp"
                android:text="@string/thank_you"/>
            <TextView
                android:id="@+id/confirm_price_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/price_label"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/confirm_order_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/order_label"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>